<resources>
    <string name="app_name">قدسنا</string>
    <string name="enable_DM">تفعيل الوضع الليلي</string>
    <string name="DM">الوضع الليلي</string>
    <string name="HQ">إحصائيات عمليات الهدم في القدس</string>
    <string name="txt_size">حجم النص</string>
    <string name="txt_news">آخر الأخبار</string>
    <string name="txt_video">تصفح جميع فيديوهاتنا</string>
    <string name="txt_all">رؤية الكل</string>
    <string name="txt_far">يبلغ بعدك عن المسجد الاقصى </string>
    <string name="txt_more">اقرأ المزيد</string>
    <string name="txt_change">تغيير اللغة</string>
    <string name="txt_playlist">قوائم التشغيل</string>
    <string name="video_one">مع المرابطة هنادي 1</string>
    <string name="video_three">فلاشات مقدسية – الموسم الثالث –</string>
    <string name="video_four">مع المرابطة هنادي 2</string>
    <string name="video_five">فلاشات مقدسية – الموسم الثاني –</string>
    <string name="video_five_title">هدم البيوت / معلومة مقدسية,قانون أملاك الغائبين / معلومة مقدسية,الديانة اليهودية/ معلومة مقدسية,القدس عند اليهود / معلومة مقدسية,الهيكل عند اليهود/ معلومة مقدسية,الحروب الصليبية/ معلومة مقدسية,فقر المقدسيين/ معلومة مقدسية,ترخيص الأبنية/ معلومة مقدسية</string>
    <string name="video_two">يوسف ومريم – الموسم الأول –</string>
    <string name="video_four_title">مع المرابطة هنادي الموسم الثاني الحلقة السادسة - الهوية الزرقاء,مع المرابطة هنادي الموسم الثاني الحلقة الخامسة- باب المغاربة,برنامج مع المرابطة هنادي الموسم الثاني الحلقة الثامنة - تسريب العقارات,مع المرابطة هنادي الموسم الثاني الحلقة الثالثة - الرباط والقائمة الذهبية,مع المرابطة هنادي الموسم الثاني الحلقة السابعة - الفتح الصلاحي,مع المرابطة هنادي الموسم الثاني الحلقة الرابعة - التضييق الاقتصادي,مع المرابطة هنادي الموسم الثاني الحلقة الاولى - مصلى باب الرحمة,مع المرابطة هنادي الموسم الثاني الحلقة الثانية - النصارى والقدس</string>
    <string name="video_three_title">التهويد_معلومة مقدسية,هضبة موريا_معلومة مقدسية,قدس واحدة_معلومة مقدسية,مصلى الأنبياء_معلومة مقدسية,ليس حرماً_معلومة مقدسية,ما هو المسجد الأقصى_معلومة مقدسية,التقسيم الزماني والمكاني_معلومة مقدسية,علاقة المسجد الحرام بالمسجد الأقصى</string>
    <string name="video_one_title">أسماء المسجد الأقصى مع المرابطة هنادي,حقيقة المسجد الأقصى مع المرابطة هنادي,تهويد القدس مع المرابطة هنادي,ضريبة الارنونا مع المرابطة هنادي,التقسيم الزماني مع المرابطة هنادي,المصلى المرواني مع المرابطة هنادي,البلدة القديمة وأقساامها مع المرابطة هنادي,حرمة المسجد الاقصى مع المرابطة هنادي</string>
    <string name="video_two_title">يوسف ومريم - تاريخ بيت المقدس,يوسف ومريم - اسم المسجد الأقصى,يوسف ومريم - ما هو المسجد الأقصى؟,يوسف ومريم - حفريات المسجد الأقصى,يوسف ومريم - معالم المسجد الأقصى,يوسف ومريم - علاقة المسجد الأقصى بالمسجد الحرام,يوسف ومريم - فضائل المسجد الاقصى,يوسف ومريم - فضائل المسجد الاقصى2</string>
    <string name="video">الفيديوهات</string>
    <string name="details">صنفت سلطات الاحتلال الإسرائيلية أربعة أنواع لهدم المنازل وهي:

1- الهدم العسكري: وهو هدم البيوت على يد الجيش الاحتلال الإسرائيلي لأسباب عسكرية (بذريعة حماية الجنود والمستوطنات)؛ مع أن معظم سكان هذه المنازل أبرياء؛ ولكن إسرائيل تبرر هذه الأعمال تحت مسمى "أهداف عسكرية قانونية"، وهذا النوع من الهدم لا يطبق على وضع قرية سلوان فقط؛ بل هو سائد في كافة أنحاء الضفة الغربية ومناطق (ج).



2- الهدم العقابي: وهو هدم منازل العائلات الفلسطينية على يد جيش الاحتلال الإسرائيلي بذريعة تنفيذ أبنائهم عمليات عسكرية ضد الإسرائيليين. وهذا النوع من الهدم ليس له أي أهداف عسكرية. وبالعودة إلى معاهدة جنيف الرابعة المادة (33): لا يجوز معاقبة أي شخص محمي، ضد جريمة لم يرتكبها شخصيا؛ وبالتالي فإن "الهدم العقابي" يعارض النظام الأساسي لهذه المعاهدة والمادة (50) من قرارات "لائحة لاهاي".

3- الهدم الإداري: وهو الأكثر شيوعاً، وينفذ هذا القرار بذريعة البناء دون الحصول على ترخيص، أو بذريعة المصلحة العامة (كما تظهر بعض الحالات في حي البستان). وتكمن السهولة في إصدار القرار الإداري للهدم بالاكتفاء بإصدار مهندس البلدية بلاغًا بهذه الحالات؛ في حين يقوم رئيس البلدية بدوره بالتوقيع عليه؛ مع أن "البناء بدون تراخيص" يجري أيضًا في المستوطنات بكثرة.

4- الهدم القضائي: هو عبارة عن قرار قضائي يصدر عن المحاكم الإسرائيلية، ومنها: محكمة الشؤون المحلية، والمحكمة المركزية، والمحكمة العليا. ويأتي قرار الهدم القضائي عادة بعد الانتهاء من الإجراءات والقرارات الإدارية الصادرة عن بلدية القدس.

ويحظر، وفق المبدأ الأساسي لقانون الهدم القضائي، معاقبة أي فرد عن فعل لم يقم به هو شخصيًا؛ (كذلك لا يوجد نص في قانون العقوبات الإسرائيلي يخول السلطات الإسرائيلية معاقة الأفراد على أعمال قام بها أفراد آخرون؛ وهو ما يتماشى مع المبدأ الذي ينص على شخصنة العقوبة (فردية العقوبة).</string>
    <string name="title_activity_maps">الخريطة</string>
</resources>