<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".activites.SettingActivity">

    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:text="@string/enable_DM"
            android:textStyle="bold"
            android:textColor="?attr/textColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Switch android:id="@+id/enableDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/DM"
            android:textColor="?attr/textColor"/>

        <Button
            android:id="@+id/changeLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/txt_change"
            android:textSize="18dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>